--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
     .glow-link::after{content:'';position:absolute;left:0;right:0;bottom:-6px;height:3px;border-radius:8px;background:linear-gradient(90deg,var(--denim),var(--accent));opacity:0;transform:translateY(6px);transition:all .28s}
     .glow-link:hover::after{opacity:1;transform:translateY(0)}
   </style>
+  <meta name="monetag" content="679847eff90a370c8e8d312a056c1ad4">
 </head>
 <body>
   <header>
